# canboat_explorer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODO.md  listen_can.py  pyproject.toml
.claude/: settings.json
.claude/commands/: build.md  design.md  talk.md
.claude/hooks/: block-write-existing.ps1
.github/workflows/: release.yml
canboat_explorer/: __main__.py
canboat_explorer/bus/: can_reader.py  waveshare_bus.py
canboat_explorer/core/: n2k.py  paths.py  session_log.py  settings.py  store.py
canboat_explorer/ui/: main_window.py  settings_dialog.py  tab_decoded.py  tab_n2k.py  tab_network.py  tab_raw_can.py
nemafiddler/: __main__.py  can_reader.py  listen_can.py  n2k.py  session_log.py  store.py
nemafiddler/bus/: can_reader.py
nemafiddler/core/: fast_packet.py  n2k.py  paths.py  session_log.py  settings.py  store.py
nemafiddler/ui/: main_window.py  settings_dialog.py  tab_decoded.py  tab_n2k.py  tab_raw_can.py
tools/: listen_can.py
