[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nemafiddler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "python-can>=4.3",
]

[project.scripts]
nemafiddler = "nemafiddler.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nemafiddler*"]
