[build-system]
requires = ["setuptools>=68"]

[project]
name = "canboat_explorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "python-can>=4.3",
    "pyserial",
    "nmea2000",
]

[project.scripts]
canboat_explorer = "canboat_explorer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["canboat_explorer*"]

[tool.setuptools.package-data]
canboat_explorer = ["canboat.json"]
